--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: node: 6
+image: node:6
 
 variables:
   # hostname of the DOKKU deployment server
@@ -37,6 +37,6 @@ deploy_app_to_dokku:
     - deploy
   script:
     # push the app to the deploy server
-    - git subtree push --prefix app dokku@{DEPLOY_SRV}:$CI_PROJECT_NAME master
+    - git subtree push --prefix app dokku@${DEPLOY_SRV}:$CI_PROJECT_NAME master
   only:
     - master
