--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm install && node ./bin/www"
   },
+    
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
@@ -14,5 +15,10 @@
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
+  },
+    
+  "engines": {
+    "node": "~6.11.4",
+    "npm": "~3.10.10"
   }
 }
