Fix to subtree script project name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,6 @@ deploy_app_to_dokku:
     - deploy
   script:
     # push the app to the deploy server
-    - git subtree push --prefix app dokku@${DEPLOY_SRV}:$CI_PROJECT_NAME master
+    - git subtree push --prefix app dokku@${DEPLOY_SRV}:$CI_ATOMIC-FILMS master
   only:
     - master
