--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "debug": "~3.1.0",
+    "express": "~4.16.2",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11",
+    "pug": "2.0.0-rc.4",
     "serve-favicon": "~2.4.5"
   },
   "engines": {
