--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~3.1.0",
     "express": "~4.16.2",
+    "mongoose": "^4.13.4",
     "morgan": "~1.9.0",
     "pug": "2.0.0-rc.4",
     "serve-favicon": "~2.4.5"
