--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,4 @@ services:
     environment:
       - MONGO_INITDB_DATABASE=atomic-films # Sets up database to be initialized with data
     volumes:
-      - ./mongo-seed:/docker-entrypoint-initdb.d # Mounts a Mongo-seed subdirectory to the docker-entrypoint-initdb.d directory in the container. This allows any Shell or JavaScript scripts to run automagically after MongoDB comes up
+      - ./mongo-seed:/docker-entrypoint-initdb.d # Mounts a Mongo-seed subdirectory to docker-entrypoint-initdb.d directory in container.
