--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~3.1.0",
     "express": "~4.16.2",
-    "mongoose": "^4.13.4",
+    "mongoose": "^4.13.6",
     "morgan": "~1.9.0",
     "pug": "2.0.0-rc.4",
+    "request": "^2.83.0",
     "serve-favicon": "~2.4.5"
   },
   "engines": {
